tests/__snapshots__/validation-if-unexpected-trailing-token-stderr.snap.txt
Error: Unexpected token.

  1 | // @tstyche if { target: "5.6" } unexpected
    |                                  ~
  2 | 
  3 | import { expect, test } from "tstyche";
  4 | 

      at ./__typetests__/sample.tst.ts:1:34

